Refactoring of download logs to use ServletSupport.